2008-04-21  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fix indexer range crasher. Thanks
	  to Atsushi Eno and Joseph Lombrozo for spotting this.

2008-04-18  Marek Safar <marek.safar@gmail.com>

	* Parser/mcs/**: Exposed most of the type container members.

2008-04-17  Michael Hutchinson <mhutchinson@novell.com> 

	* FormattingStrategy/CSharpIndentEngine.cs: Implement
	  IDocumentStateEngine so that state tracking logic can be moved into
	  MonoDevelop.Ide.
	* Gui/CSharpTextEditorExtension.cs: Move state tracking logic into
	  MonoDevelop.Ide. Tidy some things into regions.

2008-04-17  Marek Safar <marek.safar@gmail.com>

	* Parser/mcs/**
	* Parser/DomParser.cs: Added top level types info.

2008-04-16  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Track API change. Remove char code
	  translation hack.
	* Gui/CompilerOptionsPanelWidget.cs: Fix minor GTK warning.

2008-04-16  Marek Safar <marek.safar@gmail.com>

	* Parser/mcs/**: Initial top level DOM support.
	
	* Parser/DomParser.cs: Updated.

	* Makefile.am: Updated.

2008-04-16  Marek Safar <marek.safar@gmail.com>

	* Parser/mcs/cs-parser.cs: Sync with /mcs/mcs

	* Makefile.am: Updated.

2008-04-15  Mike Krüger <mkrueger@novell.com> 

	* Parser/Parser.cs: fixed Bug 379224 - Folded XML-comment should
	  contain content of <summary/>

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/CodeGenerator.cs: Fix potential infinite loop.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Use the new mime type extension to register
	  new file types.
	* Parser/CSharpVisitor.cs: Remove debug code.

2008-04-10  Mike Krüger <mkrueger@novell.com> 

	* Makefile.am: updated makefile.am

2008-04-10  Mike Krüger <mkrueger@novell.com> 

	* Parser/mcs/typemanager.cs: fixes compilation error.

2008-04-10  Mike Krüger <mkrueger@novell.com> 

	* CSharpBinding.addin.xml, CSharpBinding.mdp, Parser/DomParser.cs,