@@ -1,3 +1,7 @@
+2008-04-24  Mike Krüger <mkrueger@novell.com> 
+
+	* Parser/DomParser.cs: Worked on mcs integration.
+
 2008-04-21  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* Gui/CSharpTextEditorExtension.cs: Fix indexer range crasher. Thanks
